# DerbyStats

./: .gitignore  CMakeLists.txt  Cargo.toml  DerbyStats.cpp  DerbyStats.h  Exceptions.h  FileServe.h  GameStateStore.cpp  GameStateStore.h  GamesController.h  Logger.hpp  README.md  ScoreboardConnector.cpp  ScoreboardConnector.h  build.bat  build.rs  build.sh  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  cmake.yml
api/: ApiController.h  GamesController.cpp  GamesController.h  RostersController.cpp  RostersController.h
public/: index.html
src/: cumulative_score.rs  game_info.rs  jammer_stats.rs  main.rs  penalties_by_type.rs  scoreboard_connector.rs  scoreboard_data.rs  server.ts  socket_server.rs
src/server/: assets-router.ts  scoreboard-connector.ts  server.ts
src/server/api/: api-controller.ts  cumulative-score.ts  socket-server.ts
src/ui/: App.tsx  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/ui/src/: App.css  App.js  App.js.map  App.tsx  Routes.tsx  main.js  main.js.map
src/ui/src/commonTypes/: IIndexer.ts  PenaltyCounts.ts  index.ts
src/ui/src/components/atoms/: index.ts
src/ui/src/components/atoms/GraphContainer/: GraphContainer.module.scss  GraphContainer.tsx  index.ts
src/ui/src/components/atoms/PenaltyLine/: PenaltyLine.module.scss  PenaltyLine.tsx  index.ts
src/ui/src/components/controls/: index.ts
src/ui/src/components/controls/ContentsList/: ContentsList.tsx  index.ts
src/ui/src/components/controls/ContentsTree/: ContentsTree.tsx  index.ts
src/ui/src/components/controls/CumulativeScoreGraph/: CumulativeScoreGraph.tsx  index.ts
src/ui/src/components/controls/GamesList/: GamesList.tsx
src/ui/src/components/controls/JamCountByJammerGraph/: JamCountByJammerGraph.tsx  index.ts
src/ui/src/components/controls/NetScoreByJammerGraph/: NetScoreByJammerGraph.tsx  index.ts
src/ui/src/components/controls/TeamPenaltiesChart/: TeamPenaltiesChart.tsx  index.ts
src/ui/src/components/controls/TeamPenaltyCountByJamGraph/: TeamPenaltyCountByJamGraph.tsx  index.ts
src/ui/src/components/controls/TeamPenaltyCountByTypeGraph/: TeamPenaltyCountByTypeGraph.tsx  index.ts
src/ui/src/components/controls/TeamPenaltyShareByTypeChart/: TeamPenaltyShareByTypeChart.tsx  index.ts
src/ui/src/components/pages/ColorTest/: ColorTest.tsx  index.ts
src/ui/src/components/pages/HomePage/: HomePage.module.scss  HomePage.tsx
src/ui/src/components/pages/tabs/: CumulativeScoreTab.tsx  index.ts
src/ui/src/contexts/: index.ts
src/ui/src/contexts/DarkThemeContext/: DarkThemeContext.tsx  index.ts
src/ui/src/contexts/GameContext/: GameContext.tsx  index.ts
src/ui/src/hooks/: index.ts  state-socket.ts  team-color.ts
state_stores/: GameStateStore.cpp  GameStateStore.h  RostersStateStore.cpp  RostersStateStore.h  StateStore.hpp
ui/: index.html  main.tsx  package-lock.json  package.json
ui/.parcel-cache/: 1a3826a004e78c1f  27cc86e92213f512  2872ead3c955face  47cb0478f3aaec0f  a384f0ec43b99fbc  b66df9c5520be78c  bad946c421a6f2b3  c15b994fe5cacf96.txt  data.mdb  fbccdf9e4afdd61a.txt  lock.mdb
