[package]
name = "derby-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.5"
serde = { version = "1.0.185", features = [ "derive" ] } 
serde_json = "1.0.105"
bus = "2.4.1"
regex = "1.9.4"