[package]
name = "derby-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.5"
serde = { version = "1.0.185", features = [ "derive" ] } 
serde_json = "1.0.105"
bus = "2.4.1"
regex = "1.9.4"
hyper = { version = "0.14", features = [ "full" ] }
hyper-staticfile = "0.9.5"
tokio = { version = "1", features = [ "full" ] }
tokio-util = "0.7.8"