[package]
name = "derby-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bus = "2.4.1"
clap = "4.4.2"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
log = "0.4"
regex = "1.9.4"
serde = { version = "1.0.185", features = [ "derive" ] } 
serde_json = "1.0.105"
simplelog = "0.12"
tokio = { version = "1", features = [ "full" ] }
tokio-stream = "0.1.1"
warp = "0.3"
websocket = "0.26"

[build-dependencies]
cargo-emit = "0.2.1"